cleaning and update readme

--- a/nyc-crime-introduction-eda.ipynb
+++ b/nyc-crime-introduction-eda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NYC Crime EDA and introduction\n",
+    "# NYC Crime Introduction\n",
     "- In this script I look at the data gathered for the introduction part of this project and do a little exploratory analysis."
    ]
   },
